--- a/app/components/StopSearcher.css
+++ b/app/components/StopSearcher.css
@@ -2,21 +2,23 @@
     display: flex;
     flex-direction: column;  
     width: 100%;
+    height: 100%;
     background-color: white;;
 }
 
 .stop-searcher-section-1 {
     height: 5vh;
     width: 100vw;
+    padding: 4px;
 }
 
 .stop-searcher-s1-container{
     border: 1px solid black;
-    margin: 4px;
     border-radius: 5px;
     display: flex;
     flex-direction: row;
     height: 100%;
+    width: 100%;
 }
 
 .stop-searcher-exit-btn {
@@ -34,6 +36,7 @@
 .stop-searcher-section-2 {
     height: 45vh;
     width: 100vw;
+    padding: 4px;
 }
 
 .stop-searcher-s2-container {
@@ -42,11 +45,11 @@
     border: 1px solid black;
     border-radius: 5px;
     height: 100%;
-    margin: 4px;
 }
 
 .stop-searcher-section-3 {
     height: 50vh;
+    padding: 4px;
 }
 
 .stop-searcher-route-btn {
